--- a/clusterloader2/testing/network-policy/network-policy-soak/scale-overrides.yaml
+++ b/clusterloader2/testing/network-policy/network-policy-soak/scale-overrides.yaml
@@ -8,7 +8,7 @@
 # prometheus parameters
 CL2_PROMETHEUS_SCRAPE_CILIUM_AGENT: true
 CL2_PROMETHEUS_SCRAPE_CILIUM_AGENT_INTERVAL: 30s
-CL2_PROMETHEUS_SCRAPE_CILIUM_ENVOY: true
+CL2_PROMETHEUS_SCRAPE_CILIUM_ENVOY: false
 CL2_PROMETHEUS_TOLERATE_MASTER: true
 CL2_PROMETHEUS_MEMORY_LIMIT_FACTOR: 30.0
 CL2_PROMETHEUS_MEMORY_SCALE_FACTOR: 30.0
@@ -21,10 +21,16 @@ CL2_PROMETHEUS_NODE_SELECTOR: "prometheus: \"true\""
 # scale the cluster and keep the number of workers per client limted.
 # small scale test - 2000 clients, 2000 servers, 1000 policies
 # large scale test - 20000 clients, 20000 servers, 1000 policies
-CL2_NUMBER_OF_CLIENTS_PER_GROUP: 20
-CL2_NUMBER_OF_SERVERS_PER_GROUP: 20
-CL2_NUMBER_OF_GROUPS: 1000
+CL2_NUMBER_OF_CLIENTS_PER_GROUP: 1
+CL2_NUMBER_OF_SERVERS_PER_GROUP: 1
+CL2_NUMBER_OF_GROUPS: 2
 CL2_TARGET_PORT: 8080
-CL2_WORKERS_PER_CLIENT: 5
-CL2_DURATION: 10800s # 3 hours 
+CL2_TARGET_PORT2: 9090
+CL2_WORKERS_PER_CLIENT: 1
+CL2_DURATION: 800s # 3 hours 
 CL2_NETWORK_POLICY_TYPE: cnp
+CL2_NET_POLICY_L7_ENABLED: false
+CL2_L3_L4_PORT: true
+CL2_RESTART_DELETION_ENABLED: true
+CL2_CLIENT_POD_MONITOR: true
+CL2_REPEATS: 4
