--- a/clusterloader2/pkg/measurement/common/network-policy/network-policy-soak/manifests/network_policy.yaml
+++ b/clusterloader2/pkg/measurement/common/network-policy/network-policy-soak/manifests/network_policy.yaml
@@ -15,14 +15,18 @@ spec:
     - matchLabels:
         {{ (StructuralData .TargetLabelKey)}}: {{.TargetLabelValue}}
         k8s:io.kubernetes.pod.namespace: {{.TargetNamespace}}  
+{{if .L3L4Port}}
     toPorts:
     - ports: 
       - port: "{{.TargetPort}}"
         protocol: TCP
+{{end}}
+{{if .L7Enabled}}
       rules:
         http:
         - method: GET
           path: {{.TargetPath}}
+{{end}}
 {{else if .NetworkPolicy_Type "ccnp" }}
 apiVersion: cilium.io/v2
 kind: CiliumClusterwideNetworkPolicy
@@ -43,10 +47,12 @@ spec:
     - ports: 
       - port: "{{.TargetPort}}"
         protocol: TCP
+{{if .L7Enabled}}
       rules:
         http:
         - method: GET
           path: {{.TargetPath}}
+{{end}}
 {{else}}
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
