--- a/clusterloader2/testing/network-policy/overrides.yaml
+++ b/clusterloader2/testing/network-policy/overrides.yaml
@@ -1,6 +1,6 @@
 CL2_PROMETHEUS_SCRAPE_CILIUM_AGENT: true
 CL2_PROMETHEUS_SCRAPE_CILIUM_AGENT_INTERVAL: 30s
-CL2_PROMETHEUS_SCRAPE_CILIUM_ENVOY: true
+CL2_PROMETHEUS_SCRAPE_CILIUM_ENVOY: false
 CL2_PROMETHEUS_TOLERATE_MASTER: true
 CL2_PROMETHEUS_MEMORY_LIMIT_FACTOR: 30.0
 CL2_PROMETHEUS_MEMORY_SCALE_FACTOR: 30.0
@@ -11,11 +11,10 @@ CL2_NET_POLICY_ENFORCEMENT_LATENCY_TARGET_LABEL_KEY: net-pol-test
 CL2_NET_POLICY_ENFORCEMENT_LATENCY_TARGET_LABEL_VALUE: enforcement-latency
 CL2_NET_POLICY_ENFORCEMENT_LATENCY_NODE_LABEL_KEY: test
 CL2_NET_POLICY_ENFORCEMENT_LATENCY_NODE_LABEL_VALUE: net-policy-client
-CL2_NET_POLICY_ENFORCEMENT_LATENCY_MAX_TARGET_PODS_PER_NS: 10
-CL2_NET_POLICY_ENFORCEMENT_LOAD_COUNT: 5000
-CL2_NET_POLICY_ENFORCEMENT_LOAD_QPS: 100
-CL2_NUMBER_OF_SERVERS: 19 # per namespace
-CL2_NUMBER_OF_CLIENTS: 2 # not used
+CL2_NET_POLICY_ENFORCEMENT_LATENCY_MAX_TARGET_PODS_PER_NS: 1000
+CL2_NET_POLICY_ENFORCEMENT_LOAD_COUNT: 0
+CL2_NET_POLICY_ENFORCEMENT_LOAD_QPS: 0
+CL2_NUMBER_OF_SERVERS: 4 # per namespace
 CL2_NET_POLICY_TYPE: cnp
-CL2_NET_POLICY_L7_ENABLED: true
-CL2_TARGET_NAMESPACE_COUNT: 550
+CL2_NET_POLICY_L7_ENABLED: false
+CL2_TARGET_NAMESPACE_COUNT: 2
