Implement Connectivity Soak Test Framework
- Added a new measurement for Connectivity Soak Test in `connectivity_soak.go` to facilitate network policy testing.
- Updated `connectivity_soak_config.yaml` to comment out restart and deletion actions for better clarity.
- Created necessary Kubernetes manifests for client and target deployments, RBAC roles, and network policies.
- Enhanced the README file with instructions on how to run the soak test using the clusterloader.
- Implemented logic to deploy and manage client and target pods, including resource gathering and cleanup processes.
- Added support for different types of network policies (CiliumNetworkPolicy, CiliumClusterwideNetworkPolicy, and standard NetworkPolicy).

--- a/clusterloader2/testing/soak-test/connectivity_soak_config.yaml
+++ b/clusterloader2/testing/soak-test/connectivity_soak_config.yaml
@@ -193,20 +193,20 @@ steps:
       testDuration: "{{$DURATION}}"
       workerPerClient: {{$WORKERS_PER_CLIENT}}
       npType: {{$Network_Policy_Type}}
-{{if $RESTART_DELETION_ENABLED}}
-- name: Connectivity Soak Test - RestartPods
-  measurements:
-  - Identifier: ConnectiviySoakMeasurement
-    Method: ConnectivitySoakMeasurement
-    Params:
-      action: restart
-- name: Connectivity Soak Test - Delete Pods
-  measurements:
-  - Identifier: ConnectivitySoakMeasurement
-    Method: ConnectivitySoakMeasurement
-    Params:
-      action: delete-pods
-{{end}}
+# {{if $RESTART_DELETION_ENABLED}}
+# - name: Connectivity Soak Test - RestartPods
+#   measurements:
+#   - Identifier: ConnectiviySoakMeasurement
+#     Method: ConnectivitySoakMeasurement
+#     Params:
+#       action: restart
+# - name: Connectivity Soak Test - Delete Pods
+#   measurements:
+#   - Identifier: ConnectivitySoakMeasurement
+#     Method: ConnectivitySoakMeasurement
+#     Params:
+#       action: delete-pods
+# {{end}}
 {{end}}
 # 5. gather network performance measurement (wait and gather results)
 - name: Connectivityy Soak Test - Gather Results
