Fix pre-push hook script and update README for soak test commands; enable network policy in network policy config

--- a/clusterloader2/testing/soak-test/network-policy/network_policy_config.yaml
+++ b/clusterloader2/testing/soak-test/network-policy/network_policy_config.yaml
@@ -185,6 +185,7 @@ steps:
       clientReplicasPerDep: {{$NUMBER_OF_CLIENTS_PER_Group}}
       targetPort: {{$TARGET_PORT}}
       targetPort2: {{$TARGET_PORT2}}
+      enableNetworkPolicy: true
       l7Enabled: {{$NET_POLICY_L7_ENABLED}}
       l3l4port: {{$L3_L4_PORT}}
       resourceGatheringEnabled: false
