--- a/clusterloader2/testing/soak-test/network-policy/scale-overrides.yaml
+++ b/clusterloader2/testing/soak-test/network-policy/scale-overrides.yaml
@@ -27,10 +27,10 @@ CL2_NUMBER_OF_GROUPS: 2
 CL2_TARGET_PORT: 8080
 CL2_TARGET_PORT2: 9090
 CL2_WORKERS_PER_CLIENT: 1
-CL2_DURATION: 300s # 3 hours 
+CL2_DURATION: 800s # 3 hours 
 CL2_NETWORK_POLICY_TYPE: cnp
 CL2_NET_POLICY_L7_ENABLED: false
 CL2_L3_L4_PORT: true
-CL2_RESTART_DELETION_ENABLED: false
+CL2_RESTART_DELETION_ENABLED: true
 CL2_CLIENT_POD_MONITOR: true
 CL2_REPEATS: 1
